--- a/packages/utils/scss/layout/_object-position.scss
+++ b/packages/utils/scss/layout/_object-position.scss
@@ -1,54 +1,52 @@
-// object-position documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/object-position.
-
-/// This is equivalent to `object-position: center;`. This specifies centered alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: center;`.
 /// @example object-position: center;
 /// @name .k-object-position-center
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: top;`. This specifies top alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: top;`.
 /// @example object-position: top;
 /// @name .k-object-position-top
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: right;`. This specifies right alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: right;`.
 /// @example object-position: right;
 /// @name .k-object-position-right
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: bottom;`. This specifies bottom alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: bottom;`.
 /// @example object-position: bottom;
 /// @name .k-object-position-bottom
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: left;`. This specifies left alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: left;`.
 /// @example object-position: left;
 /// @name .k-object-position-left
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: top left;`. This specifies top left alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: top left;`.
 /// @example object-position: top left;
 /// @name .k-object-position-top-left
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: top right;`. This specifies top right alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: top right;`.
 /// @example object-position: top right;
 /// @name .k-object-position-top-right
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: bottom left;`. This specifies bottom left alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: bottom left;`.
 /// @example object-position: bottom left;
 /// @name .k-object-position-bottom-left
 /// @group object-position
 /// @contextType css
 
-/// This is equivalent to `object-position: bottom right;`. This specifies bottom right alignment of the selected replaced element's contents within the element's box.
+/// This is equivalent to `object-position: bottom right;`.
 /// @example object-position: bottom right;
 /// @name .k-object-position-bottom-right
 /// @group object-position
