--- a/packages/utils/scss/svg/_fill.scss
+++ b/packages/utils/scss/svg/_fill.scss
@@ -1,34 +1,34 @@
-/// This is equivalent to `fill: none;`. SVG shape filling color will not be overriden.
+/// This is equivalent to `fill: none;`.
 /// @example fill: none;
 /// @name .k-fill-none
 /// @group fill
 /// @contextType css
 
-/// This is equivalent to `fill: inherit;`. Sets inherited filling color of a SVG shape.
+/// This is equivalent to `fill: inherit;`.
 /// @example fill: inherit;
 /// @name .k-fill-inherit
 /// @group fill
 /// @contextType css
 
-/// This is equivalent to `fill: currentColor;`. Sets element's color as filling color of a SVG shape.
+/// This is equivalent to `fill: currentColor;`.
 /// @example fill: currentColor;
 /// @name .k-fill-currentColor
 /// @group fill
 /// @contextType css
 
-/// This is equivalent to `fill: transparent;`. Sets transparent filling color of a SVG shape.
+/// This is equivalent to `fill: transparent;`.
 /// @example fill: transparent;
 /// @name .k-fill-transparent
 /// @group fill
 /// @contextType css
 
-/// This is equivalent to `fill: black;`. Sets black filling color of a SVG shape.
+/// This is equivalent to `fill: black;`.
 /// @example fill: black;
 /// @name .k-fill-black
 /// @group fill
 /// @contextType css
 
-/// This is equivalent to `fill: white;`. Sets white filling color of a SVG shape.
+/// This is equivalent to `fill: white;`.
 /// @example fill: white;
 /// @name .k-fill-white
 /// @group fill
