--- a/packages/utils/scss/svg/_stroke.scss
+++ b/packages/utils/scss/svg/_stroke.scss
@@ -1,34 +1,34 @@
-/// This is equivalent to `stroke: none;`. SVG shape stroke color will not be overriden.
+/// This is equivalent to `stroke: none;`.
 /// @example stroke: none;
 /// @name .k-stroke-none
 /// @group stroke
 /// @contextType css
 
-/// This is equivalent to `stroke: inherit;`. Sets inherited stroke color of a SVG shape.
+/// This is equivalent to `stroke: inherit;`.
 /// @example stroke: inherit;
 /// @name .k-stroke-inherit
 /// @group stroke
 /// @contextType css
 
-/// This is equivalent to `stroke: currentColor;`. Sets element's color as stroke color of a SVG shape.
+/// This is equivalent to `stroke: currentColor;`.
 /// @example stroke: currentColor;
 /// @name .k-stroke-currentColor
 /// @group stroke
 /// @contextType css
 
-/// This is equivalent to `stroke: transparent;`. Sets transparent stroke color of a SVG shape.
+/// This is equivalent to `stroke: transparent;`.
 /// @example stroke: transparent;
 /// @name .k-stroke-transparent
 /// @group stroke
 /// @contextType css
 
-/// This is equivalent to `stroke: black;`. Sets black stroke color of a SVG shape.
+/// This is equivalent to `stroke: black;`.
 /// @example stroke: black;
 /// @name .k-stroke-black
 /// @group stroke
 /// @contextType css
 
-/// This is equivalent to `stroke: white;`. Sets white stroke color of a SVG shape.
+/// This is equivalent to `stroke: white;`.
 /// @example stroke: white;
 /// @name .k-stroke-white
 /// @group stroke
