--- a/packages/utils/scss/transform/_origin.scss
+++ b/packages/utils/scss/transform/_origin.scss
@@ -1,56 +1,54 @@
-// transform-origin documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/transform-origin.
-
-/// This is equivalent to `transform-origin: center;`. Sets the origin for an element's transformations to be in the center.
+/// This is equivalent to `transform-origin: center;`.
 /// @example transform-origin: center;
-/// @name .origin-center
+/// @name .k-origin-center
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: top;`. Sets the origin for an element's transformations to be in the top.
+/// This is equivalent to `transform-origin: top;`.
 /// @example transform-origin: top;
-/// @name .origin-top
+/// @name .k-origin-top
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: right;`. Sets the origin for an element's transformations to be in the right.
+/// This is equivalent to `transform-origin: right;`.
 /// @example transform-origin: right;
-/// @name .origin-right
+/// @name .k-origin-right
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: bottom;`. Sets the origin for an element's transformations to be in the bottom.
+/// This is equivalent to `transform-origin: bottom;`.
 /// @example transform-origin: bottom;
-/// @name .origin-bottom
+/// @name .k-origin-bottom
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: left;`. Sets the origin for an element's transformations to be in the left.
+/// This is equivalent to `transform-origin: left;`.
 /// @example transform-origin: left;
-/// @name .origin-left
+/// @name .k-origin-left
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: top-left;`. Sets the origin for an element's transformations to be in the top-left.
+/// This is equivalent to `transform-origin: top-left;`.
 /// @example transform-origin: top-left;
-/// @name .origin-top-left
+/// @name .k-origin-top-left
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: top-right;`. Sets the origin for an element's transformations to be in the top-right.
+/// This is equivalent to `transform-origin: top-right;`.
 /// @example transform-origin: top-right;
-/// @name .origin-top-right
+/// @name .k-origin-top-right
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: bottom-left;`. Sets the origin for an element's transformations to be in the bottom-left.
+/// This is equivalent to `transform-origin: bottom-left;`.
 /// @example transform-origin: bottom-left;
-/// @name .origin-bottom-left
+/// @name .k-origin-bottom-left
 /// @group transform-origin
 /// @contextType css
 
-/// This is equivalent to `transform-origin: bottom-right;`. Sets the origin for an element's transformations to be in the bottom-right.
+/// This is equivalent to `transform-origin: bottom-right;`.
 /// @example transform-origin: bottom-right;
-/// @name .origin-bottom-right
+/// @name .k-origin-bottom-right
 /// @group transform-origin
 /// @contextType css
 
