--- a/packages/utils/scss/typography/_font-style.scss
+++ b/packages/utils/scss/typography/_font-style.scss
@@ -1,12 +1,10 @@
-// Font-style documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/font-style.
-
-/// This is equivalent to `font-style: italic;`. Sets italic font style to the element.
+/// This is equivalent to `font-style: italic;`.
 /// @example font-style: italic;
 /// @name .k-font-italic
 /// @group font-style
 /// @contextType css
 
-/// This is equivalent to `font-style: normal;`. Sets normal font style to the element.
+/// This is equivalent to `font-style: normal;`.
 /// @example font-style: normal;
 /// @name .k-font-non-italic
 /// @group font-style
