--- a/packages/utils/scss/typography/_font-weight.scss
+++ b/packages/utils/scss/typography/_font-weight.scss
@@ -1,54 +1,52 @@
-// Font-weight documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight.
-
-/// This is equivalent to `font-weight: 100;`. Sets 100 font weight to the element.
+/// This is equivalent to `font-weight: 100;`.
 /// @example font-weight: 100;
 /// @name .k-font-thin
 /// @group font-weight
 /// @contextType css
 
-/// This is equivalent to `font-weight: 200;`. Sets 200 font weight to the element.
+/// This is equivalent to `font-weight: 200;`.
 /// @example font-weight: 200;
 /// @name .k-font-extralight
 /// @group font-weight
 /// @contextType css
 
-/// This is equivalent to `font-weight: 300;`. Sets 300 font weight to the element.
+/// This is equivalent to `font-weight: 300;`.
 /// @example font-weight: 300;
-/// @name .k-font-normal
-/// @group font-weight
-/// @contextType css
-
-/// This is equivalent to `font-weight: 400;`. Sets 400 font weight to the element.
-/// @example font-weight: 400;
 /// @name .k-font-light
 /// @group font-weight
 /// @contextType css
 
-/// This is equivalent to `font-weight: 500;`. Sets 500 font weight to the element.
+/// This is equivalent to `font-weight: 400;`.
+/// @example font-weight: 400;
+/// @name .k-font-normal
+/// @group font-weight
+/// @contextType css
+
+/// This is equivalent to `font-weight: 500;`.
 /// @example font-weight: 500;
 /// @name .k-font-medium
 /// @group font-weight
 /// @contextType css
 
-/// This is equivalent to `font-weight: 600;`. Sets 600 font weight to the element.
+/// This is equivalent to `font-weight: 600;`.
 /// @example font-weight: 600;
 /// @name .k-font-semibold
 /// @group font-weight
 /// @contextType css
 
-/// This is equivalent to `font-weight: 700;`. Sets 700 font weight to the element.
+/// This is equivalent to `font-weight: 700;`.
 /// @example font-weight: 700;
 /// @name .k-font-bold
 /// @group font-weight
 /// @contextType css
 
-/// This is equivalent to `font-weight: 800;`. Sets 800 font weight to the element.
+/// This is equivalent to `font-weight: 800;`.
 /// @example font-weight: 800;
 /// @name .k-font-extrabold
 /// @group font-weight
 /// @contextType css
 
-/// This is equivalent to `font-weight: 900;`. Sets 900 font weight to the element.
+/// This is equivalent to `font-weight: 900;`.
 /// @example font-weight: 900;
 /// @name .k-font-black
 /// @group font-weight
