--- a/packages/utils/scss/typography/_text-decoration.scss
+++ b/packages/utils/scss/typography/_text-decoration.scss
@@ -1,24 +1,22 @@
-// Text-decoration documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/text-decoration.
-
-/// This is equivalent to `text-decoration: underline;`. Text of the content is underlined.
+/// This is equivalent to `text-decoration: underline;`.
 /// @example text-decoration: underline;
 /// @name .k-underline
 /// @group text-decoration
 /// @contextType css
 
-/// This is equivalent to `text-decoration: overline;`. Text of the content is overlined.
+/// This is equivalent to `text-decoration: overline;`.
 /// @example text-decoration: overline;
 /// @name .k-overline
 /// @group text-decoration
 /// @contextType css
 
-/// This is equivalent to `text-decoration: line-through;`. Text of the content is strikeout.
+/// This is equivalent to `text-decoration: line-through;`.
 /// @example text-decoration: line-through;
 /// @name .k-line-through
 /// @group text-decoration
 /// @contextType css
 
-/// This is equivalent to `text-decoration: none-decoration;`. Text of the content is not decorated.
+/// This is equivalent to `text-decoration: none-decoration;`.
 /// @example text-decoration: none-decoration;
 /// @name .k-none-decoration
 /// @group text-decoration
