--- a/packages/utils/scss/typography/_text-transform.scss
+++ b/packages/utils/scss/typography/_text-transform.scss
@@ -1,20 +1,18 @@
-// Text-transform documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform.
-
-/// This is equivalent to `text-transform: lowercase;`. Is a keyword that converts all characters to lowercase.
+/// This is equivalent to `text-transform: lowercase;`.
 /// @example text-transform: lowercase;
-/// @name k-text-lowercase
+/// @name .k-text-lowercase
 /// @group text-transform
 /// @contextType css
 
-/// This is equivalent to `text-transform: uppercase;`. Is a keyword that converts all characters to uppercase.
+/// This is equivalent to `text-transform: uppercase;`.
 /// @example text-transform: uppercase;
-/// @name k-text-uppercase
+/// @name .k-text-uppercase
 /// @group text-transform
 /// @contextType css
 
-/// This is equivalent to `text-transform: capitalize;`. Is a keyword that converts the first letter of each word to uppercase. Other characters remain unchanged (they retain their original case as written in the element's text).
+/// This is equivalent to `text-transform: capitalize;`.
 /// @example text-transform: capitalize;
-/// @name k-text-capitalize
+/// @name .k-text-capitalize
 /// @group text-transform
 /// @contextType css
 
