--- a/packages/utils/scss/border/_outline-offset.scss
+++ b/packages/utils/scss/border/_outline-offset.scss
@@ -1,32 +1,30 @@
-// Outline-offset documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/outline-offset.
-
-/// This is equivalent to `outline-offset: 1px;`. Sets 1px space between an outline and the edge or border of an element.
+/// This is equivalent to `outline-offset: 1px;`.
 /// @example outline-offset: 1px;
-/// @name .k-outline
+/// @name .k-outline-offset
 /// @group outline-offset
 /// @contextType css
 
-/// This is equivalent to `outline-offset: 0;`. Sets 0px space between an outline and the edge or border of an element.
+/// This is equivalent to `outline-offset: 0;`.
 /// @example outline-offset: 0;
-/// @name .k-outline-0
+/// @name .k-outline-offset-0
 /// @group outline-offset
 /// @contextType css
 
-/// This is equivalent to `outline-offset: 2px;`. Sets 2px space between an outline and the edge or border of an element.
+/// This is equivalent to `outline-offset: 2px;`.
 /// @example outline-offset: 2px;
-/// @name .k-outline-2
+/// @name .k-outline-offset-2
 /// @group outline-offset
 /// @contextType css
 
-/// This is equivalent to `outline-offset: 4px;`. Sets 4px space between an outline and the edge or border of an element.
+/// This is equivalent to `outline-offset: 4px;`.
 /// @example outline-offset: 4px;
-/// @name .k-outline-4
+/// @name .k-outline-offset-4
 /// @group outline-offset
 /// @contextType css
 
-/// This is equivalent to `outline-offset: 8px;`. Sets 8px space between an outline and the edge or border of an element.
+/// This is equivalent to `outline-offset: 8px;`.
 /// @example outline-offset: 8px;
-/// @name .k-outline-8
+/// @name .k-outline-offset-8
 /// @group outline-offset
 /// @contextType css
 
