--- a/packages/utils/scss/border/_outline-width.scss
+++ b/packages/utils/scss/border/_outline-width.scss
@@ -1,30 +1,28 @@
-// Outline-width documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/outline-width.
-
-/// This is equivalent to `outline-width: 1px;`. Sets 1px width of an element's outline.
+/// This is equivalent to `outline-width: 1px;`.
 /// @example outline-width: 1px;
 /// @name .k-outline
 /// @group outline-width
 /// @contextType css
 
-/// This is equivalent to `outline-width: 0;`. Sets 0px width of an element's outline.
+/// This is equivalent to `outline-width: 0;`.
 /// @example outline-width: 0;
 /// @name .k-outline-0
 /// @group outline-width
 /// @contextType css
 
-/// This is equivalent to `outline-width: 2px;`. Sets 2px width of an element's outline.
+/// This is equivalent to `outline-width: 2px;`.
 /// @example outline-width: 2px;
 /// @name .k-outline-2
 /// @group outline-width
 /// @contextType css
 
-/// This is equivalent to `outline-width: 4px;`. Sets 4px width of an element's outline.
+/// This is equivalent to `outline-width: 4px;`.
 /// @example outline-width: 4px;
 /// @name .k-outline-4
 /// @group outline-width
 /// @contextType css
 
-/// This is equivalent to `outline-width: 8px;`. Sets 8px width of an element's outline.
+/// This is equivalent to `outline-width: 8px;`.
 /// @example outline-width: 8px;
 /// @name .k-outline-8
 /// @group outline-width
