--- a/packages/utils/scss/flex-grid/_flex.scss
+++ b/packages/utils/scss/flex-grid/_flex.scss
@@ -1,10 +1,10 @@
-/// This is equivalent to `flex: 1 1 0%;`. It sizes the item not based on its `width`/`height` properties, but based on the available space. This is similar to `flex: 1 1 auto` except it is allowed to shrink beyond its initial size.
+/// This is equivalent to `flex: 1 1 0%;`.
 /// @example flex: 1 1 0%;
 /// @name .k-flex-1
 /// @group flex
 /// @contextType css
 
-/// This is equivalent to `flex: 1 1 auto;`. Beware, this is not the default value. It sizes the item based on its `width`/`height` properties, but makes it fully flexible so that they absorb any extra space along the main axis. If all items are either `flex: auto`, `flex: initial`, or `flex: none`, any remaining space after the items have been sized will be distributed evenly to the items with `flex: auto`.
+/// This is equivalent to `flex: 1 1 auto;`.
 /// @example flex: 1 1 auto;
 /// @name .k-flex-auto
 /// @group flex
@@ -16,7 +16,7 @@
 /// @group flex
 /// @contextType css
 
-/// This is equivalent to `flex: 0 0 auto;`. It sizes the item according to its `width`/`height` properties, but makes it fully inflexible. This is similar to `flex: initial` except it is not allowed to shrink, even in an overflow situation.
+/// This is equivalent to `flex: 0 0 auto;`.
 /// @example flex: 0 0 auto;
 /// @name .k-flex-none
 /// @group flex
