--- a/packages/utils/scss/flex-grid/_order.scss
+++ b/packages/utils/scss/flex-grid/_order.scss
@@ -1,18 +1,16 @@
-// place-self documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/place-self.
-
-/// This is equivalent to `order: 1;`. An item is in the first ordinal group in a flex or grid container.
+/// This is equivalent to `order: 1;`.
 /// @example order: 1;
 /// @name .k-order-first
 /// @group order
 /// @contextType css
 
-/// This is equivalent to `order: -9999;`. An item is in the very first ordinal group in a flex or grid container.
+/// This is equivalent to `order: -9999;`.
 /// @example order: -9999;
 /// @name .k-order-first
 /// @group order
 /// @contextType css
 
-/// This is equivalent to `order: 9999;`. An item is in the very last ordinal group in a flex or grid container.
+/// This is equivalent to `order: 9999;`.
 /// @example order: 9999;
 /// @name .k-order-last
 /// @group order
