--- a/packages/utils/scss/layout/_box-sizing.scss
+++ b/packages/utils/scss/layout/_box-sizing.scss
@@ -1,12 +1,10 @@
-// Box-sizing documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/box-sizing.
-
-/// This is equivalent to `box-sizing: border-box;`. The width and height properties include the content, padding, and border, but do not include the margin.
+/// This is equivalent to `box-sizing: border-box;`.
 /// @example box-sizing: border-box;
 /// @name .k-box-sizing-border
 /// @group box-sizing
 /// @contextType css
 
-/// This is equivalent to `box-sizing: content-box;`. This is the initial and default value as specified by the CSS standard. The width and height properties include the content, but does not include the padding, border, or margin.
+/// This is equivalent to `box-sizing: content-box;`.
 /// @example box-sizing: content-box;
 /// @name .k-box-sizing-content
 /// @group box-sizing
