--- a/packages/utils/scss/layout/_display.scss
+++ b/packages/utils/scss/layout/_display.scss
@@ -1,42 +1,40 @@
-// Display documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/display.
-
-/// This is equivalent to `display: none;`. Turns off the display of an element so that it has no effect on layout (the document is rendered as though the element did not exist). All descendant elements also have their display turned off.
+/// This is equivalent to `display: none;`.
 /// @example display: none;
 /// @name .k-d-none
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: contents;`. These elements don't produce a specific box by themselves. They are replaced by their pseudo-box and their child boxes.
+/// This is equivalent to `display: contents;`.
 /// @example display: contents;
 /// @name .k-d-contents
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: block;`. The element generates a block element box, generating line breaks both before and after the element when in the normal flow.
+/// This is equivalent to `display: block;`.
 /// @example display: block;
 /// @name .k-d-block
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: inline;`. The element generates one or more inline element boxes that do not generate line breaks before or after themselves. In normal flow, the next element will be on the same line if there is space.
+/// This is equivalent to `display: inline;`.
 /// @example display: inline;
 /// @name .k-d-inline
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: inline-block;`. The element generates a block element box that will be flowed with surrounding content as if it were a single inline box (behaving much like a replaced element would).
+/// This is equivalent to `display: inline-block;`.
 /// @example display: inline-block;
 /// @name .k-d-inline-block
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: flex;`. The element behaves like a block element and lays out its content according to the flexbox model.
+/// This is equivalent to `display: flex;`.
 /// @example display: flex;
 /// @name .k-d-flex
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: inline-flex;`. The element behaves like an inline element and lays out its content according to the flexbox model.
+/// This is equivalent to `display: inline-flex;`.
 /// @example display: inline-flex;
 /// @name .k-d-inline-flex
 /// @group display
@@ -54,31 +52,31 @@
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: table;`. These elements behave like HTML `<table>` elements. It defines a block-level box.
+/// This is equivalent to `display: table;`.
 /// @example display: table;
 /// @name .k-d-table
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: inline-table;`. The inline-table value does not have a direct mapping in HTML. It behaves like an HTML `<table>` element, but as an inline box, rather than a block-level box. Inside the table box is a block-level context.
+/// This is equivalent to `display: inline-table;`.
 /// @example display: inline-table;
 /// @name .k-d-inline-table
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: list-item;`. These elements behave like HTML `<LI>` elements. It defines a block-level box.
+/// This is equivalent to `display: list-item;`.
 /// @example display: list-item;
 /// @name .k-d-list-item
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: table-row;`. These elements behave like <tr> HTML elements.
+/// This is equivalent to `display: table-row;`.
 /// @example display: table-row;
 /// @name .k-d-table-row
 /// @group display
 /// @contextType css
 
-/// This is equivalent to `display: table-cell;`. These elements behave like <td> HTML elements.
+/// This is equivalent to `display: table-cell;`.
 /// @example display: table-cell;
 /// @name .k-d-table-cell
 /// @group display
