--- a/packages/utils/scss/layout/_overflow.scss
+++ b/packages/utils/scss/layout/_overflow.scss
@@ -1,28 +1,28 @@
-/// This is equivalent to `overflow: auto;`. Depends on the user agent. If content fits inside the padding box, it looks the same as visible, but still establishes a new block formatting context. Desktop browsers provide scrollbar if content overflows.
+/// This is equivalent to `overflow: auto;`.
 /// @example overflow: auto;
 /// @name .k-overflow-auto
 /// @group overflow
 /// @contextType css
 
-/// This is equivalent to `overflow: hidden;`. Content is clipped if necessary to fit the padding box. No scrollbar is provided, and no support for allowing the user to scroll (such as by dragging or using a scroll wheel) is allowed. The content can be scrolled programmatically (for example, by setting the value of a property such as offsetLeft), so the element is still a scroll container.
+/// This is equivalent to `overflow: hidden;`.
 /// @example overflow: hidden;
 /// @name .k-overflow-hidden
 /// @group overflow
 /// @contextType css
 
-/// This is equivalent to `overflow: visible;`. Content is not clipped and may be rendered outside the padding box.
+/// This is equivalent to `overflow: visible;`.
 /// @example overflow: visible;
 /// @name .k-overflow-visible
 /// @group overflow
 /// @contextType css
 
-/// This is equivalent to `overflow: scroll;`. Content is clipped if necessary to fit the padding box. Browsers always display scrollbar whether or not any content is actually clipped, preventing scrollbar from appearing or disappearing as content changes. Printers may still print overflowing content.
+/// This is equivalent to `overflow: scroll;`.
 /// @example overflow: scroll;
 /// @name .k-overflow-scroll
 /// @group overflow
 /// @contextType css
 
-/// This is equivalent to `overflow: clip;`. Like for hidden, the content is clipped to the element's padding box. The difference between clip and hidden is that the clip keyword also forbids all scrolling, including programmatic scrolling.
+/// This is equivalent to `overflow: clip;`.
 /// @example overflow: clip;
 /// @name .k-overflow-clip
 /// @group overflow
