--- a/packages/utils/scss/transform/_skew.scss
+++ b/packages/utils/scss/transform/_skew.scss
@@ -1,18 +1,22 @@
-// skew documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/skew.
-
-/// This is equivalent to `transform: skewX(0deg);`. Defines 0deg transformation in the x-axis direction that skews an element on the 2D plane.
+/// This is equivalent to `transform: skewX(0deg);`.
 /// @example transform: skewX(0deg);
 /// @name .k-skew-x-0
 /// @group skew
 /// @contextType css
 
-/// This is equivalent to `transform: skewX(1deg);`. Defines 1deg transformation in the x-axis direction that skews an element on the 2D plane.
+/// This is equivalent to `transform: skewX(1deg);`.
 /// @example transform: skewX(1deg);
 /// @name .k-skew-x-1
 /// @group skew
 /// @contextType css
 
-/// This is equivalent to `transform: skewY(1deg);`. Defines 1deg transformation in the y-axis direction that skews an element on the 2D plane.
+/// This is equivalent to `transform: skewY(0deg);`.
+/// @example transform: skewY(0deg);
+/// @name .k-skew-y-0
+/// @group skew
+/// @contextType css
+
+/// This is equivalent to `transform: skewY(1deg);`.
 /// @example transform: skewY(1deg);
 /// @name .k-skew-y-1
 /// @group skew
