--- a/packages/utils/scss/typography/_vertical-align.scss
+++ b/packages/utils/scss/typography/_vertical-align.scss
@@ -1,39 +1,49 @@
-// Text-align documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/text-align.
-
-/// This is equivalent to `text-align: left;`. The inline contents are aligned to the left edge of the line box.
-/// @example text-align: left;
-/// @name .k-left
-/// @group text-align
+/// This is equivalent to `vertical-align: baseline;`.
+/// @example vertical-align: baseline;
+/// @name .k-align-baseline
+/// @group vertical-align
 /// @contextType css
 
-/// This is equivalent to `text-align: right;`. The inline contents are aligned to the right edge of the line box.
-/// @example text-align: right;
-/// @name .k-right
-/// @group text-align
+/// This is equivalent to `vertical-align: top;`.
+/// @example vertical-align: top;
+/// @name .k-align-top
+/// @group vertical-align
 /// @contextType css
 
-/// This is equivalent to `text-align: center;`. The inline contents are centered within the line box.
-/// @example text-align: center;
-/// @name .k-center
-/// @group text-align
+/// This is equivalent to `vertical-align: middle;`.
+/// @example vertical-align: middle;
+/// @name .k-align-middle
+/// @group vertical-align
 /// @contextType css
 
-/// This is equivalent to `text-align: justify;`. The inline contents are justified. Text should be spaced to line up its left and right edges to the left and right edges of the line box, except for the last line.
-/// @example text-align: justify;
-/// @name .k-justify
-/// @group text-align
+/// This is equivalent to `vertical-align: bottom;`.
+/// @example vertical-align: bottom;
+/// @name .k-align-bottom
+/// @group vertical-align
 /// @contextType css
 
-/// This is equivalent to `text-align: start;`. The same as left if direction is left-to-right and right if direction is right-to-left.
-/// @example text-align: start;
-/// @name .k-start
-/// @group text-align
+/// This is equivalent to `vertical-align: text-top;`.
+/// @example vertical-align: text-top;
+/// @name .k-align-text-top
+/// @group vertical-align
 /// @contextType css
 
-/// This is equivalent to `text-align: end;`. The same as right if direction is left-to-right and left if direction is right-to-left.
-/// @example text-align: end;
-/// @name .k-end
-/// @group text-align
+/// This is equivalent to `vertical-align: text-bottom;`.
+/// @example vertical-align: text-bottom;
+/// @name .k-align-text-bottom
+/// @group vertical-align
+/// @contextType css
+
+/// This is equivalent to `vertical-align: sub;`.
+/// @example vertical-align: sub;
+/// @name .k-align-sub
+/// @group vertical-align
+/// @contextType css
+
+/// This is equivalent to `vertical-align: super;`.
+/// @example vertical-align: super;
+/// @name .k-align-super
+/// @group vertical-align
 /// @contextType css
 
 @mixin kendo-utils--typography--vertical-align() {
